--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="display" id="display">0</div>
         <div class="calculator-buttons">
             <span class="double-width">Notação</span>
-            <span><input type="radio" name="notacao" value="in" checked /> In</span>
-            <span><input type="radio" name="notacao" value="pos" /> Pós</span><br/>
+            <span><input type="radio" onclick="changeInfixe()" name="notacao" value="in" checked /> In</span>
+            <span><input type="radio" onclick="changePosfixe()" name="notacao" value="pos" /> Pós</span><br/>
             
             <button onclick="clearDisplay()">C</button>
             <button onclick="addToDisplay('(')">(</button>
